--- a/env.yml
+++ b/env.yml
@@ -5,7 +5,6 @@ channels:
         - smirarab
 
 dependencies:
-        - nextflow
         - iqtree
         - python
         - biopython
@@ -18,3 +17,5 @@ dependencies:
         - r-ggplot2
         - amas
         - treeshrink
+        - ucsc-faSomeRecords
+
